--- a/test-frontend/src/app/shared/header/header.component.html
+++ b/test-frontend/src/app/shared/header/header.component.html
@@ -11,10 +11,7 @@
         <!-- Logo icon -->
         <b class="logo-icon">
           <!-- Dark Logo icon -->
-          <img
-            src="../../../assets/plugins/images/logo-icon.png"
-            alt="homepage"
-          />
+          <img src="./assets/plugins/images/logo-icon.png" alt="homepage" />
         </b>
         <!--End Logo icon -->
         <!-- Logo text -->
