--- a/test-frontend/src/app/pages/orders/orders.component.html
+++ b/test-frontend/src/app/pages/orders/orders.component.html
@@ -5,7 +5,8 @@
     </div>
   </div>
 </div>
-<div class="row">
+<app-loading *ngIf="loading"></app-loading>
+<div class="row" *ngIf="!loading">
   <div class="col-12">
     <div class="card">
       <div class="card-body">
@@ -23,7 +24,7 @@
             </div>
           </div>
         </div>
-        <div class="table-responsive">
+        <div class="table-responsive" *ngIf="orders.length > 0">
           <table class="table table-bordered" aria-label="my-orders-table">
             <thead>
               <tr>
@@ -53,10 +54,10 @@
                       <i class="fas fa-pencil-alt text-inverse m-r-10"></i>
                     </a>
                     <a
-                      (click)="onDeleteOrder(order.id)"
                       class="cursor"
                       data-toggle="tooltip"
                       data-original-title="Close"
+                      (click)="onDeleteOrder(order.id)"
                     >
                       <i class="fas fa-eraser text-danger"></i>
                     </a>
