--- a/test-frontend/src/app/pages/products/products.component.html
+++ b/test-frontend/src/app/pages/products/products.component.html
@@ -5,21 +5,22 @@
     </div>
   </div>
 </div>
-<div class="row">
+<app-loading *ngIf="loading"></app-loading>
+<div class="row" *ngIf="!loading">
   <div class="col-12">
     <div class="card">
       <div class="card-body">
         <div class="row mb-3">
           <div class="col">
             <div>
-              <button class="btn btn-success">
+              <button class="btn btn-success" routerLink="/up-item/new">
                 <i class="fas fa-plus"></i>
                 Add a new product
               </button>
             </div>
           </div>
         </div>
-        <div class="table-responsive">
+        <div class="table-responsive" *ngIf="products.length > 0">
           <table class="table table-bordered" aria-label="my-orders-table">
             <thead>
               <tr>
@@ -39,16 +40,17 @@
                 <td>
                   <div class="d-flex align-items-center justify-content-around">
                     <a
-                      href="#"
+                      [routerLink]="['/up-item', product.id]"
                       data-toggle="tooltip"
                       data-original-title="Edit"
                     >
                       <i class="fas fa-pencil-alt text-inverse m-r-10"></i>
                     </a>
                     <a
-                      href="#"
+                      class="cursor"
                       data-toggle="tooltip"
                       data-original-title="Close"
+                      (click)="onDeleteProduct(product.id)"
                     >
                       <i class="fas fa-eraser text-danger"></i>
                     </a>
