feat: Incremental numOrder

--- a/test-frontend/src/app/pages/edit-or-add-order/edit-or-add-order.component.html
+++ b/test-frontend/src/app/pages/edit-or-add-order/edit-or-add-order.component.html
@@ -170,4 +170,4 @@
   [productId]="productId"
   [productName]="productName"
 ></app-edit-modal>
-<app-modal [addId]="addId"></app-modal>
+<app-modal [addId]="addId" [newOrderStr]="newOrderStr"></app-modal>
